@@ -11,6 +11,11 @@ $Id$
 	You can now use %me% in filters
 	The built-in personal filter is updated to do so
 	Fixed a bug in moving the poiner after an expunge
+	Fixed up the normal scrolling code.  Now it should always
+	  land on a message, but it's still not optimal.
+	Added the variable 'smartstrip' which will strip kerberos
+	  instances out for the 'reply' command.
+	Added -R/usr/athena/lib to the build for Athena
 	
 1.2.3
 	Added filters "ping", "auto" and "login" by default.
